# libvmod-awsrest

./: .gitignore  .travis.yml  CHANGES.rst  COPYING  Makefile.am  README.rst  configure.ac  debian  sw_vrt.sh  vmod-awsrest.spec  vmod-awsrest.spec.in
.github/workflows/: build-deb.yml  test.yml
debian/: changelog  control  control.in  copyright  dirs
debian.vrt/: bf_build_130.sh  bf_build_140.sh  bf_build_71.sh  changelog  gen.sh  pkg.sh  test.vtc
debian.vrt/130/: changelog  control
debian.vrt/140/: changelog  control
debian.vrt/71/: changelog  control
debian.vrt/trunk/: changelog  control  copyright  rules
src/: Makefile.am  vmod_awsrest.c  vmod_awsrest.vcc  vmod_campur_xcir.c  vmod_campur_xcir.vcc
src/tests/: aws_sigv4.php  gcs_sigv2.php  gcs_sigv4.php  r01.vta  r01.vtg  r01.vtx  r02.vta  r02.vtx  r03.vtx  t01.vtx  test01.vtc  test02.vtc  test03.vtc  test04.vtc  vta.php  vtg.php  vtx.php
